unpackaged/main/default/objects/OpportunityLineItem/fields/ccpe_ocp__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Opportunity Products</relationshipLabel>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>