unpackaged/main/default/objects/OpportunityLineItem/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>IF( Opportunity.SBQQ__PrimaryQuote__r.SBQQ__Primary__c =true ,   SBQQ__QuoteLine__r.SBQQ__EndDate__c   ,null)</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>