unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Category_List__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_List__c</fullName>
    <label>Product Category List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Category</valueSetName>
    </valueSet>
</CustomField>