unpackaged/main/default/objects/OpportunityLineItem/fields/QS_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QS_Annual_Recurring_Revenue__c</fullName>
    <description>Twin</description>
    <label>QS Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>