unpackaged/main/default/objects/OpportunityLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>IF( Opportunity.SBQQ__PrimaryQuote__r.SBQQ__Primary__c =true ,  SBQQ__QuoteLine__r.SBQQ__StartDate__c ,null)</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>